# sistemas-distribuidos

./: README.md  api.py  base_bados_querry.sql  bd_biblioteca.py  ingreso de usuario.sql
ejemplo_1/: api.py  base_bados_querry.sql  bd_biblioteca.py
ejemplo_2/: apy_2.py  test.html  test_2.html
ejemplo_3/: api_3.py  base.sql  pyproject.toml  test.html
ejemplo_3/ORM/: config.py  esquemas.py  modelos.py  repo.py
